Added topoisomerase activity to the model

--- a/sc_model.ipynb
+++ b/sc_model.ipynb
@@ -50,7 +50,8 @@
     "    'DNA_twist_plength': 95, # pN\n",
     "    'DNA_plectonome_twist_plength': 24, # pN\n",
     "    'temperature': 298, # K\n",
-    "    'base_promoter_initiation_rate': 1 / 120 # 1 / sec\n",
+    "    'base_promoter_initiation_rate': 1 / 120, # 1 / sec\n",
+    "    'topo_rate': 1 / 1200 # 1 / sec\n",
     "}"
    ]
   },
@@ -293,9 +294,9 @@
     "        inter_distances = np.concatenate((np.array([np.inf]),\n",
     "                                          np.diff(augmented_loc[1:-1]),\n",
     "                                          np.array([np.inf])))\n",
-    "        # Halt if the polymerase is within the RNAC radius in the direction it is going\n",
-    "        velocities[(polymerase_directions > 0) & (inter_distances[1:] < self.rnac_r)] = 0\n",
-    "        velocities[(polymerase_directions < 0) & (inter_distances[:-1] < self.rnac_r)] = 0\n",
+    "        # Halt if the polymerase is within the 2 RNAC radii in the direction it is going\n",
+    "        velocities[(polymerase_directions > 0) & (inter_distances[1:] < 2 * self.rnac_r)] = 0\n",
+    "        velocities[(polymerase_directions < 0) & (inter_distances[:-1] < 2 * self.rnac_r)] = 0\n",
     "        \n",
     "        drag = self.eta * (states[1::3] ** self.alpha)\n",
     "        angular_changes =  drag * velocities * self.w0 / (self.chi + drag) - rnac_torque / (self.chi + drag)\n",
@@ -367,6 +368,12 @@
     "        i += 1\n",
     "    return i - 1\n",
     "\n",
+    "def attach_on_call(func):\n",
+    "    \"\"\"Decorator for adding a stochastic event.\"\"\"\n",
+    "    def wrap(self):\n",
+    "        self.stochastic_events.append(func(self))\n",
+    "    return wrap\n",
+    "\n",
     "class SupercoilingSimulation(object):\n",
     "    \"\"\"\n",
     "    A base class that encodes a Gillepse-algorithm method\n",
@@ -406,11 +413,57 @@
     "        self.model = bind_supercoiling_model(params, bcs)\n",
     "        self.genes = [(g[0], g[1]) for g in genes]\n",
     "        self.base_promoter_rate = params['base_promoter_initiation_rate']\n",
+    "        self.topo_rate = params['topo_rate']\n",
     "        \n",
     "        self.stochastic_events = []\n",
     "        \n",
     "        for g in genes:\n",
     "            self.add_stochastic_gene_init_event(*g)\n",
+    "    \n",
+    "    @attach_on_call\n",
+    "    def enable_topo_relaxation(self):\n",
+    "        \"\"\"\n",
+    "        Returns the stochastic event information\n",
+    "        required to relax DNA.\n",
+    "        \n",
+    "        Returns:\n",
+    "        --------\n",
+    "        A tuple (base_rate, state_dependent_rate, mutate_func).\n",
+    "        Here, the base rate is set to the relaxation rate constant\n",
+    "        and the state_dependent_rate is always set to 1. Mutate_func is\n",
+    "        the key function that removes supercoiling from a gene pair.\n",
+    "        \"\"\"\n",
+    "        state_dependent_func = lambda x: 1.0\n",
+    "        def remove_supercoiling(self, state):\n",
+    "            if len(state) == 0:\n",
+    "                return\n",
+    "            # Sort genes by physical location\n",
+    "            sorted_genes = sorted(self.genes, key=lambda x: min(x))\n",
+    "            # We now rewrite all polymerases that are sitting on the range\n",
+    "            # (idx).start to (idx + 1).end\n",
+    "            # We do this by removing all relevant polymerases from state, then\n",
+    "            # using the model.compute_twist function to recalculate, at each\n",
+    "            # of the polymerases to rewrite\n",
+    "            if len(sorted_genes) == 1:\n",
+    "                lower_bound = -np.inf\n",
+    "                upper_bound = np.inf\n",
+    "            else:\n",
+    "                relax_after_idx = np.random.choice(range(len(sorted_genes) - 1))\n",
+    "                lower_bound = min(sorted_genes[relax_after_idx])\n",
+    "                upper_bound = max(sorted_genes[relax_after_idx + 1])\n",
+    "            polymerase_rewrite_idx = np.where(\n",
+    "                (state[::3] > lower_bound) & (state[::3] < upper_bound))\n",
+    "            polymerase_positions = state[::3][polymerase_rewrite_idx]\n",
+    "            if len(polymerase_positions) == 0:\n",
+    "                # No polymerases in this range: just return\n",
+    "                return\n",
+    "            # Exploit polymerases always being sorted\n",
+    "            new_state = np.delete(state, range(np.min(polymerase_rewrite_idx) * 3,\n",
+    "                                               (np.max(polymerase_rewrite_idx) + 1) * 3))\n",
+    "            self.simstate[2::3][polymerase_rewrite_idx] = \\\n",
+    "                self.model.evaluate_twist(polymerase_positions, new_state)\n",
+    "        \n",
+    "        return (self.topo_rate, state_dependent_func, remove_supercoiling)\n",
     "    \n",
     "    def add_polymerase(self, location, direction, termination_func, event_functions=[]):\n",
     "        \"\"\"\n",
@@ -534,11 +587,13 @@
     "                                                self.polymerase_directions),\n",
     "                        (last_t, next_attempt_time),\n",
     "                        self.simstate,\n",
-    "                        events=stop_events)\n",
+    "                        events=stop_events,\n",
+    "                        method='RK45')\n",
     "                    \n",
     "                    if ode_result.status == -1:\n",
     "                        print(ode_result.message)\n",
-    "                        return None\n",
+    "                        result.append((ode_result.y, ode_result.y))\n",
+    "                        return result\n",
     "                    result.append((ode_result.t, ode_result.y))\n",
     "                    last_t = ode_result.t[-1]\n",
     "                    self.simstate = ode_result.y[:,-1]\n",
@@ -572,7 +627,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim = SupercoilingSimulation(params, ('free', (10000, 0)), [(1000, 700, 1), (200, 500, 1)])"
+    "sim = SupercoilingSimulation(params, ('free', (10000, 0)), [(1000, 700, 1), (200, 500, 1), (1700, 1300, 1)])\n",
+    "sim.enable_topo_relaxation()"
    ]
   },
   {
@@ -582,9 +638,18 @@
    "outputs": [],
    "source": [
     "np.random.seed(1)\n",
-    "%timeit example_run = sim.simulate((0,10000))\n",
+    "example_run = sim.simulate((0,10000))\n",
     "for segment in example_run:\n",
     "    plt.plot(segment[0], segment[1][::3,:].T, 'c')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_run[-1][1][:,-1][::3]"
    ]
   },
   {
