Added postprocess function that calculates supercoiling density and average mRNA production
Simplified notebook output

--- a/sc_model.ipynb
+++ b/sc_model.ipynb
@@ -11,6 +11,11 @@
     "from numba import njit, vectorize, float32, float64, boolean\n",
     "from numba.experimental import jitclass\n",
     "from matplotlib import pyplot as plt\n",
+    "import multiprocessing\n",
+    "import pandas as pd\n",
+    "import holoviews as hv\n",
+    "hv.extension('bokeh')\n",
+    "from holoviews.operation.datashader import datashade\n",
     "\n",
     "# Ensure we don't hit floating point errors\n",
     "np.seterr('raise')"
@@ -51,44 +56,9 @@
     "    'DNA_plectonome_twist_plength': 24, # pN\n",
     "    'temperature': 298, # K\n",
     "    'base_promoter_initiation_rate': 1 / 120, # 1 / sec\n",
-    "    'topo_rate': 1 / 1200 # 1 / sec\n",
+    "    'topo_rate': 1 / 1200, # 1 / sec\n",
+    "    'mRNA_deg_rate': 1 / 1200 # 1 / sec\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = [1, 2, 3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test.insert(1, 1000112)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[1,2,3].append([4,5,6])"
    ]
   },
   {
@@ -414,6 +384,7 @@
     "        self.genes = [(g[0], g[1]) for g in genes]\n",
     "        self.base_promoter_rate = params['base_promoter_initiation_rate']\n",
     "        self.topo_rate = params['topo_rate']\n",
+    "        self.mrna_deg_rate = params['mRNA_deg_rate']\n",
     "        \n",
     "        self.stochastic_events = []\n",
     "        \n",
@@ -434,7 +405,7 @@
     "        the key function that removes supercoiling from a gene pair.\n",
     "        \"\"\"\n",
     "        state_dependent_func = lambda x: 1.0\n",
-    "        def remove_supercoiling(self, state):\n",
+    "        def remove_supercoiling(self, t, state):\n",
     "            if len(state) == 0:\n",
     "                return\n",
     "            # Sort genes by physical location\n",
@@ -462,6 +433,10 @@
     "                                               (np.max(polymerase_rewrite_idx) + 1) * 3))\n",
     "            self.simstate[2::3][polymerase_rewrite_idx] = \\\n",
     "                self.model.evaluate_twist(polymerase_positions, new_state)\n",
+    "            \n",
+    "            if 'topo' not in self.event_times:\n",
+    "                self.event_times['topo'] = []\n",
+    "            self.event_times['topo'].append(t)\n",
     "        \n",
     "        return (self.topo_rate, state_dependent_func, remove_supercoiling)\n",
     "    \n",
@@ -484,7 +459,8 @@
     "            i: The index of the polymerase you belong to\n",
     "        event_functions: A list of tuples (event_func, mutate_func)\n",
     "            event_func: A function with the same signature as above.\n",
-    "            mutate_func: A function that takes the 3N states and mutates them somehow\n",
+    "            mutate_func: A function that takes the time, state, and \n",
+    "               polymerase index and mutates them somehow, returning nothing.\n",
     "        \"\"\"\n",
     "        new_twist = self.model.evaluate_twist(location, self.simstate)\n",
     "        # Find the correct insertion index\n",
@@ -495,10 +471,17 @@
     "        self.polymerase_directions = np.insert(self.polymerase_directions, insert_idx, direction)\n",
     "        \n",
     "        # Add ODE functions\n",
-    "        def terminate_transcription(state, i):\n",
+    "        def terminate_transcription(self, t, state, i):\n",
     "            self.simstate = np.delete(self.simstate, np.s_[(i * 3):((i + 1) * 3)])\n",
     "            self.polymerase_directions = np.delete(self.polymerase_directions, i)\n",
     "            del self.simstate_ode_funcs[i]\n",
+    "            # Add event time\n",
+    "            if 'genes' not in self.event_times:\n",
+    "                self.event_times['genes'] = {}\n",
+    "            if location not in self.event_times['genes']:\n",
+    "                self.event_times['genes'][location] = []\n",
+    "            self.event_times['genes'][location].append(t)\n",
+    "                \n",
     "        self.simstate_ode_funcs.insert(insert_idx,\n",
     "                                       [(termination_func, terminate_transcription)] + event_functions)\n",
     "\n",
@@ -523,7 +506,7 @@
     "        Adds this gene to the stochastic_events struct.\n",
     "        \"\"\"\n",
     "        direction = np.sign(gene_end - gene_start)\n",
-    "        def mutate_func(self, state):\n",
+    "        def mutate_func(self, t, state):\n",
     "            # Our mutate function simply calls add_polymerase, with a lambda that\n",
     "            # triggers an event when the polymerase reaches the gene end\n",
     "            self.add_polymerase(gene_start, direction, lambda x, i: x[3*i] - gene_end)\n",
@@ -554,6 +537,7 @@
     "        self.simstate = np.zeros(0)\n",
     "        self.simstate_ode_funcs = []\n",
     "        self.polymerase_directions = np.zeros(0)\n",
+    "        self.event_times = {}\n",
     "        result = []\n",
     "        \n",
     "        last_t = tspan[0]\n",
@@ -578,7 +562,7 @@
     "                                        lambda t, x: event[0](x,curried))(\n",
     "                            polymerase_idx) for event in events]\n",
     "                        mutate_funcs += [(lambda curried:\n",
-    "                                        lambda x: event[1](x,curried))(\n",
+    "                                        lambda s, t, x: event[1](s, t, x,curried))(\n",
     "                            polymerase_idx) for event in events]\n",
     "                    for i in range(len(stop_events)):\n",
     "                        stop_events[i].terminal = True\n",
@@ -603,7 +587,7 @@
     "                        event_idx = np.where(np.array(\n",
     "                            [len(x) for x in ode_result.t_events]) > 0)[0][0]\n",
     "                        # Mutate our state\n",
-    "                        mutate_funcs[event_idx](self.simstate)\n",
+    "                        mutate_funcs[event_idx](self, last_t, self.simstate)\n",
     "                else:\n",
     "                    # Just advance the time directly; no polymerases right now\n",
     "                    last_t = next_attempt_time\n",
@@ -617,8 +601,125 @@
     "            # Apply the state-specific state value to see if we perform this event\n",
     "            if np.random.random() < self.stochastic_events[next_stochastic_idx][1](self.simstate):\n",
     "                # Perform the stochastic state mutation\n",
-    "                self.stochastic_events[next_stochastic_idx][2](self, self.simstate)\n",
-    "        return result"
+    "                self.stochastic_events[next_stochastic_idx][2](self, last_t, self.simstate)\n",
+    "        return (result, self.event_times)\n",
+    "\n",
+    "    def postprocess_run(self, sim_run, domain_points=1000, domain_endpoints=None):\n",
+    "        \"\"\"\n",
+    "        Given the raw run data, calculates parameters\n",
+    "        of interest. Namely, this is the supercoiling density,\n",
+    "        the number of mRNAs over time (calculated using the degradation rate)\n",
+    "        \n",
+    "        Args:\n",
+    "        -----\n",
+    "        sim_run: A tuple of the form (raw, event_times):\n",
+    "            raw: A list of tuples, of the form (time_ndarray, 3N-state_ndarray)\n",
+    "            event_times: A dictionary containing details on when events occured\n",
+    "        domain_ponts: The number of points used to discritize space\n",
+    "        domain_endpoints: (optional) A tuple containing (domain_start, domain_end)\n",
+    "            to explicitly discritize over.\n",
+    "        \n",
+    "        Returns:\n",
+    "        --------\n",
+    "        A dictionary containing the following key-value pairs:\n",
+    "            raw: The input sim_run\n",
+    "            time: A single ndarray containing all timepoints\n",
+    "            x_domain: A vector of the locations that were sampled\n",
+    "            excess_twist: A sample of the excess twist, phi, across the domain for each timepoint\n",
+    "            sc_density: The supercoiling density across the domain for each timepoint\n",
+    "            gene_expression: The expression of each gene over time (calculated with a secondary\n",
+    "                Gillepsie run)\n",
+    "        \"\"\"\n",
+    "        raw, events = sim_run\n",
+    "        result = {'raw': raw}\n",
+    "        \n",
+    "        result['time'] = np.concatenate(list(x[0] for x in raw))\n",
+    "        min_x = min([np.min(x[1][::3]) for x in raw])\n",
+    "        max_x = max([np.max(x[1][::3]) for x in raw])\n",
+    "        if domain_endpoints is None:\n",
+    "            domain_endpoints = (min_x, max_x)\n",
+    "        result['x_domain'] = np.linspace(*domain_endpoints, domain_points)\n",
+    "        result['excess_twist'] = np.zeros((len(result['time']), domain_points))\n",
+    "        compute_idx = 0\n",
+    "        for run in raw:\n",
+    "            for i in range(len(run[0])):\n",
+    "                result['excess_twist'][compute_idx, :] = self.model.evaluate_twist(\n",
+    "                    result['x_domain'], run[1][:,i])\n",
+    "                compute_idx += 1\n",
+    "        dx = (max_x - min_x) / domain_points\n",
+    "        result['sc_density'] = np.diff(result['excess_twist']) / (dx * -self.model.w0)\n",
+    "        \n",
+    "        # Now compute mRNA at each timepoint\n",
+    "        # The propensity of mRNA degrading is mrna_deg_rate * num_of_mrna\n",
+    "        gene_expression = np.zeros((len(result['time']),len(events['genes'])))\n",
+    "        gene_idx = 0\n",
+    "        for gene_start, creation_events in events['genes'].items():\n",
+    "            time_accum = np.array([creation_events[0]])\n",
+    "            mRNA_accum = np.array([1])\n",
+    "            creation_idx = 1\n",
+    "            while time_accum[-1] < result['time'][-1]:\n",
+    "                # Draw the time to the next degradation\n",
+    "                if mRNA_accum[-1] > 0:\n",
+    "                    next_deg = time_accum[-1] + \\\n",
+    "                        np.random.exponential(1.0 / (mRNA_accum[-1] * self.mrna_deg_rate))\n",
+    "                else:\n",
+    "                    next_deg = result['time'][-1]\n",
+    "                # Check if a creation event occurs\n",
+    "                if creation_idx < len(creation_events):\n",
+    "                    if next_deg < creation_events[creation_idx]:\n",
+    "                        # Degradation occured!\n",
+    "                        time_accum = np.append(time_accum, np.array([next_deg]))\n",
+    "                        mRNA_accum = np.append(mRNA_accum, np.array([mRNA_accum[-1] - 1]))\n",
+    "                        continue\n",
+    "                    # Otherwise, a creation event occurs\n",
+    "                    time_accum = np.append(time_accum, np.array([creation_events[creation_idx]]))\n",
+    "                    mRNA_accum = np.append(mRNA_accum, np.array(mRNA_accum[-1] + 1))\n",
+    "                    creation_idx += 1\n",
+    "                else:\n",
+    "                    time_accum = np.append(time_accum, np.array([next_deg]))\n",
+    "                    mRNA_accum = np.append(mRNA_accum, np.array([mRNA_accum[-1] - 1]))\n",
+    "\n",
+    "            gene_expression[:,gene_idx] = np.interp(result['time'], time_accum, mRNA_accum)\n",
+    "            gene_idx += 1\n",
+    "        result['gene_expression'] = gene_expression\n",
+    "        return result\n",
+    "\n",
+    "def expression_single_run(params, bcs, genes, gene_names, sim_time, i=0):\n",
+    "    sim = SupercoilingSimulation(params, bcs, genes)\n",
+    "    sim.enable_topo_relaxation()\n",
+    "    result = sim.postprocess_run(sim.simulate((sim_time[0], sim_time[1])))\n",
+    "    times = np.linspace(*sim_time)\n",
+    "    id_val = np.ones(times.shape, dtype=int) * i\n",
+    "    df_result = pd.DataFrame(data={'id': id_val, 'time': times})\n",
+    "    for i, name in enumerate(gene_names):\n",
+    "        df_result[name] = np.interp(times, result['time'], result['gene_expression'][:,i])\n",
+    "    return df_result\n",
+    "    \n",
+    "def bulk_simulation(params, bcs, genes, gene_names, sim_time, n_runs):\n",
+    "    \"\"\"\n",
+    "    Given the relevant parameters to a supercoiling simulation,\n",
+    "    runs several rounds of simulations in order to reach aggregate averages.\n",
+    "    \n",
+    "    Args:\n",
+    "    -----\n",
+    "    params, bcs, genes: Parameters required by the SupercoilingSimulation constructor\n",
+    "    gene_names: Names attached to each gene, used when generating the aggregate dataframe.\n",
+    "    sim_time: A tuple containing (start_time, end_time, n_points) over which the simulation should be run.\n",
+    "    n_runs: The number of runs to aggregate\n",
+    "    \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    A single dataframe containing the columns:\n",
+    "        run_id: Integer containing which run it came from\n",
+    "        time: The time value of the datapoint\n",
+    "        gene_names: A series of columns with name = each of the names in gene_names\n",
+    "    \"\"\"\n",
+    "    with multiprocessing.Pool() as p:\n",
+    "        runs = [p.apply_async(expression_single_run, args=(params, bcs, genes, gene_names, sim_time, i))\n",
+    "                for i in range(n_runs)]\n",
+    "        p.close()\n",
+    "        p.join()\n",
+    "        return pd.concat([r.get() for r in runs])"
    ]
   },
   {
@@ -627,8 +728,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim = SupercoilingSimulation(params, ('free', (10000, 0)), [(1000, 700, 1), (200, 500, 1), (1700, 1300, 1)])\n",
+    "result = bulk_simulation(params, ('free', (10000, 0)), [(1000, 700, 1), (1700, 1300, 1)],\n",
+    "                ['upstream', 'downstream'], (0, 10000, 1000), 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combo_plots = hv.Scatter(result, 'time', 'upstream') * hv.Scatter(result, 'time', 'downstream')\n",
+    "datashade(combo_plots)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim = SupercoilingSimulation(params, ('free', (10000, 0)), [(1000, 700, 1),  (1700, 1300, 1)])\n",
     "sim.enable_topo_relaxation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "postprocess['gene_expression'][:,1]"
    ]
   },
   {
@@ -639,7 +769,7 @@
    "source": [
     "np.random.seed(1)\n",
     "example_run = sim.simulate((0,10000))\n",
-    "for segment in example_run:\n",
+    "for segment in example_run[0]:\n",
     "    plt.plot(segment[0], segment[1][::3,:].T, 'c')"
    ]
   },
@@ -649,7 +779,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_run[-1][1][:,-1][::3]"
+    "postprocess = sim.postprocess_run(example_run)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(postprocess['time'].shape)\n",
+    "print(postprocess['x_domain'].shape)\n",
+    "print(postprocess['excess_twist'].shape)\n",
+    "print(postprocess['sc_density'].shape)\n",
+    "postprocess['gene_expression'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(postprocess['time'], postprocess['gene_expression'])\n",
+    "for topo_event in example_run[1]['topo']:\n",
+    "    plt.axvline(topo_event)\n",
+    "plt.show()\n",
+    "plt.imshow(postprocess['excess_twist'].T)\n",
+    "plt.colorbar()\n",
+    "plt.show()\n",
+    "plt.imshow(postprocess['sc_density'].T)\n",
+    "plt.colorbar()\n",
+    "plt.show()"
    ]
   },
   {
