Added code to do a promoter matching analysis

--- a/sc_model.ipynb
+++ b/sc_model.ipynb
@@ -13,6 +13,8 @@
     "hv.extension('bokeh')\n",
     "from holoviews.operation.datashader import datashade\n",
     "\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "import stochastic_sc_model as ssc_model\n",
     "\n",
     "# Ensure we don't hit floating point errors\n",
@@ -60,13 +62,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "result = ssc_model.bulk_simulation(params, ('free', (10000, 0)), [(1000, 700, 1), (1700, 1300, 1)],\n",
-    "                ['upstream', 'downstream'], (0, 10000, 1000), 100)"
+    "Using a conversion of 1bp = .34nm, we need to investigate our different elements.\n",
+    "The upstream RFP-CYMR ORF is 975bp. WPRE is 589bp, with the polyA signal being 200bp.\n",
+    "The downstream rTTa/IRES/mVenus is 2161bp.\n",
+    "\n",
+    "The tandem case is:\n",
+    "upstream-WPRE-polyA-1212bp spacer (UbC)-rTTA combo\n",
+    "\n",
+    "The convergent case is:\n",
+    "upstream-WPRE-polyA-589 bp spacer (WPRE)-rTTA combo\n",
+    "\n",
+    "Let's make both of the edges a rigid barrier, with that barrier being ~3000bp away on each side (2000 bp viral LTRs, plus 1kb)\n",
+    "\n"
    ]
   },
   {
@@ -75,8 +85,114 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combo_plots = hv.Scatter(result, 'time', 'upstream') * hv.Scatter(result, 'time', 'downstream')\n",
-    "datashade(combo_plots)"
+    "# Create mesh of expression values\n",
+    "mesh_x, mesh_y = np.meshgrid(np.logspace(-1,0,5), np.logspace(-1,0,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RFP_start = 3000 * .34;\n",
+    "RFP_end = RFP_start + (975 + 589 + 200) * .34\n",
+    "mVenus_end = RFP_end + (589 * .34)\n",
+    "mVenus_start = mVenus_end + (2161 * .34)\n",
+    "end_barrier = mVenus_end + (3000 * .34)\n",
+    "convergent = pd.concat([\n",
+    "    ssc_model.bulk_simulation(params, ((0,0), (end_barrier, 0)),[\n",
+    "                            (RFP_start, RFP_end, rfp_strength),\n",
+    "                            (mVenus_start, mVenus_end, mVenus_strength)],\n",
+    "                ['RFP', 'mVenus'], (0, 12000, 1000), 500)\n",
+    "    for rfp_strength, mVenus_strength in tqdm(zip(mesh_x.flatten(), mesh_y.flatten()))])\n",
+    "convergent.to_feather('convergent_promoter_strength_grid.feather')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convergent = pd.read_feather('convergent_promoter_strength_grid.feather')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss_timepoint = convergent[abs((convergent['time'] - 11051)) < 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss_mean = ss_timepoint.groupby(['RFP_promoter_strength', 'mVenus_promoter_strength']).mean()\n",
+    "ss_mean['rfp_venus_ratio'] = ss_mean['RFP_expression'] / ss_mean['mVenus_expression']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heatmap = hv.HeatMap(ss_mean, ['mVenus_promoter_strength', 'RFP_promoter_strength'], 'rfp_venus_ratio')\n",
+    "heatmap.opts(colorbar=True, logx=True, logy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ss_mean['rfp_venus_ratio'])\n",
+    "promoter_ratio = mesh_y / mesh_x\n",
+    "print(promoter_ratio)\n",
+    "expression_ratio = ss_mean['rfp_venus_ratio']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convergent[abs((convergent['time'] - 11051)) < 1].groupby(['time', 'RFP_promoter_strength', 'mVenus_promoter_strength']).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat(convergent).groupby(['time','RFP_promoter_strength', 'mVenus_promoter_strength']).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datashade(hv.Points(convergent, ['time', 'RFP_expression'])) * hv.Curve(mean_result, ['time', 'RFP_expression'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datashade(hv.Points(convergent, ['time', 'mVenus_expression'])) * hv.Curve(mean_result, ['time', 'mVenus_expression'])"
    ]
   },
   {
