--- a/sc_model.ipynb
+++ b/sc_model.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
+    "from matplotlib.collections import LineCollection\n",
     "import pandas as pd\n",
     "import holoviews as hv\n",
     "hv.extension('bokeh')\n",
@@ -133,8 +134,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ss_mean = ss_timepoint.groupby(['RFP_promoter_strength', 'mVenus_promoter_strength']).mean()\n",
-    "ss_mean['rfp_venus_ratio'] = ss_mean['RFP_expression'] / ss_mean['mVenus_expression']"
+    "equal_promoter_strength = ss_timepoint[ss_timepoint['RFP_promoter_strength'] == ss_timepoint['mVenus_promoter_strength']]\n",
+    "equal_promoter_table = hv.Table(equal_promoter_strength,\n",
+    "                                [('RFP_promoter_strength', 'Promoter strength')],\n",
+    "                                ['RFP_expression', 'mVenus_expression'])"
    ]
   },
   {
@@ -143,7 +146,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "heatmap = hv.HeatMap(ss_mean, ['mVenus_promoter_strength', 'RFP_promoter_strength'], 'rfp_venus_ratio')\n",
+    "equal_scatter = equal_promoter_table.to.scatter('RFP_expression', 'mVenus_expression')\n",
+    "equal_scatter.overlay('RFP_promoter_strength').opts(\n",
+    "    hv.opts.Scatter(color=hv.Cycle('Category10'), alpha=0.5, size=5),\n",
+    "    hv.opts.NdOverlay(legend_position='top')).options(width=700, height=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equal_scatter.hist(['RFP_expression', 'mVenus_expression'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss_mean = ss_timepoint.groupby(['RFP_promoter_strength', 'mVenus_promoter_strength']).mean()\n",
+    "ss_mean['rfp_venus_ratio'] = ss_mean['RFP_expression'] / ss_mean['mVenus_expression']\n",
+    "ss_mean['rfp_venus_fold_ratio'] = np.log10(ss_mean['rfp_venus_ratio'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heatmap = hv.HeatMap(ss_mean, ['mVenus_promoter_strength', 'RFP_promoter_strength'], 'rfp_venus_fold_ratio')\n",
     "heatmap.opts(colorbar=True, logx=True, logy=True)"
    ]
   },
@@ -153,10 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(ss_mean['rfp_venus_ratio'])\n",
-    "promoter_ratio = mesh_y / mesh_x\n",
-    "print(promoter_ratio)\n",
-    "expression_ratio = ss_mean['rfp_venus_ratio']"
+    "ss_mean.loc[:, ['RFP_expression', 'mVenus_expression', 'rfp_venus_ratio']]"
    ]
   },
   {
@@ -165,7 +197,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "convergent[abs((convergent['time'] - 11051)) < 1].groupby(['time', 'RFP_promoter_strength', 'mVenus_promoter_strength']).mean()"
+    "RFP_start = 3000 * .34;\n",
+    "RFP_end = RFP_start + (975 + 589 + 200) * .34\n",
+    "mVenus_end = RFP_end + (589 * .34)\n",
+    "mVenus_start = mVenus_end + (2161 * .34)\n",
+    "end_barrier = mVenus_end + (3000 * .34)\n",
+    "sim = ssc_model.SupercoilingSimulation(params, ((0,0), (end_barrier, 0)),[\n",
+    "                            (RFP_start, RFP_end, 1),\n",
+    "                            (mVenus_start, mVenus_end, 1)])\n",
+    "\n",
+    "sim.enable_topo_relaxation()\n",
+    "single_result = sim.postprocess_run(sim.simulate((0, 12000)))\n",
+    "ssc_model.gen_movie(single_result, [\n",
+    "    (RFP_start, RFP_end, 1),\n",
+    "    (mVenus_start, mVenus_end, 1)], 60 * 60, 'equal', 'animation_output', True)\n",
+    "\n",
+    "sim = ssc_model.SupercoilingSimulation(params, ((0,0), (end_barrier, 0)),[\n",
+    "                            (RFP_start, RFP_end, .3),\n",
+    "                            (mVenus_start, mVenus_end, 1)])\n",
+    "\n",
+    "sim.enable_topo_relaxation()\n",
+    "single_result = sim.postprocess_run(sim.simulate((0, 12000)))\n",
+    "ssc_model.gen_movie(single_result, [\n",
+    "    (RFP_start, RFP_end, 1),\n",
+    "    (mVenus_start, mVenus_end, 1)], 60 * 60, 'unequal', 'animation_output', True)"
    ]
   },
   {
@@ -174,96 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.concat(convergent).groupby(['time','RFP_promoter_strength', 'mVenus_promoter_strength']).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "datashade(hv.Points(convergent, ['time', 'RFP_expression'])) * hv.Curve(mean_result, ['time', 'RFP_expression'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "datashade(hv.Points(convergent, ['time', 'mVenus_expression'])) * hv.Curve(mean_result, ['time', 'mVenus_expression'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sim = SupercoilingSimulation(params, ('free', (10000, 0)), [(1000, 700, 1),  (1700, 1300, 1)])\n",
-    "sim.enable_topo_relaxation()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "postprocess['gene_expression'][:,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.seed(1)\n",
-    "example_run = sim.simulate((0,10000))\n",
-    "for segment in example_run[0]:\n",
-    "    plt.plot(segment[0], segment[1][::3,:].T, 'c')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "postprocess = sim.postprocess_run(example_run)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(postprocess['time'].shape)\n",
-    "print(postprocess['x_domain'].shape)\n",
-    "print(postprocess['excess_twist'].shape)\n",
-    "print(postprocess['sc_density'].shape)\n",
-    "postprocess['gene_expression'].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(postprocess['time'], postprocess['gene_expression'])\n",
-    "for topo_event in example_run[1]['topo']:\n",
-    "    plt.axvline(topo_event)\n",
-    "plt.show()\n",
-    "plt.imshow(postprocess['excess_twist'].T)\n",
-    "plt.colorbar()\n",
-    "plt.show()\n",
-    "plt.imshow(postprocess['sc_density'].T)\n",
-    "plt.colorbar()\n",
-    "plt.show()"
+    "datashade(hv.Points(convergent, ['time', 'RFP_expression'])) * hv.Curve(ss_mean, ['time', 'RFP_expression'])"
    ]
   },
   {
